--- a/GoHostingServer/Site/style.css
+++ b/GoHostingServer/Site/style.css
@@ -21,7 +21,7 @@ html {
     margin-left: 20px;
 }
 
-.EmployeeQueryTest {
+.EmployeeQueryArea, .EmployeeCreationArea {
     border: solid white;
     display: inline-block;
     padding: 1.5%;
