--- a/GoHostingServer/Site/style.css
+++ b/GoHostingServer/Site/style.css
@@ -21,10 +21,11 @@ html {
     margin-left: 20px;
 }
 
-.EmployeeQueryArea, .EmployeeCreationArea, .RegisteredEmployeeArea {
+.EmployeeQueryArea, .EmployeeCreationArea, .RegisteredEmployeeArea, .PromotionDemotionArea, .FireArea {
     border: solid white;
     display: inline-block;
     padding: 1.5%;
     border-radius: 50px;
     list-style: none;
+    margin: 1%;
 }
